syntax = "proto3";

option go_package ="/hrm";

import "payroll_message.proto";

message AddPayrollRequest{
    string username = 1;
    // ctc
    oneof ctc{
        int32 yearly = 2;
        int32 monthly = 3;
    }
    int32 allowance = 4;
    // organization the emplolyee belongs to
    string organization_name  = 5;
    // employee id 
    string creator_id = 6;
}
// respond with the username of employee
message PayrollResponse{
    string username = 1;
}

message UpdatePayrollRequest {
    string username = 1;
    // ctc
    oneof ctc{
        int32 yearly = 2;
        int32 monthly = 3;
    }
    // employee id
    string updater_id = 4;
}

message PayrollFilter {
   oneof key{
       string id =1 ;
       string employee_name = 2;
   }
}

message FindEmployeePayrollRequest { PayrollFilter filter = 1;}
message FindEmployeePayrollResponse { Payroll payroll = 1; }


service PayrollService {
    // add payroll to and existing employee
    rpc AddPayroll(AddPayrollRequest) returns (PayrollResponse){};
    // update payroll of an existing employee
    rpc UpdatePayroll(UpdatePayrollRequest) returns (PayrollResponse){};
    // find payroll of an employee
    rpc FindEmployeePayroll(FindEmployeePayrollRequest) returns (FindEmployeePayrollResponse){};
}